<resources>
    <string name="app_name">Carona UNISC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista_pessoa">Lista de Pessoas</string>
    <string name="title_activity_form_pessoa">Você</string>
    <string name="label_nome">Nome:</string>
    <string name="label_senha">Senha:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_sexo">Sexo:</string>
    <string name="label_radio_masculino">Masculino</string>
    <string name="label_radio_feminino">Feminino</string>
    <string name="label_cadastro_tipo">Cadastro Tipo:</string>
    <string name="radio_receber">Receber Carona</string>
    <string name="radio_dar">Dar Carona</string>
    <string name="radio_ambos">Ambos</string>
    <string name="label_matricula">Matricula:</string>
    <string name="action_new_pessoa">Nova Pessoa</string>
    <string name="action_accept_pessoa">Salvar</string>
    <string name="welcome">Instruções/dashboard aqui</string>
    <string name="title_activity_ver_pessoa">VerPessoa</string>
    <string name="action_edit_pessoa">Editar</string>
    <string name="title_activity_maps_search">Rota</string>
    <string name="title_activity_lauch">Lauch</string>
    <string name="title_activity_logar">Logar</string>
    <string name="action_cadastro">Você</string>
    <string name="action_map">Rota</string>
    <string name="action_agenda">Agenda</string>
    <string name="action_caronas">Caronas</string>
    <string name="action_chat">Chat</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_configura_dia">Configurar Dia</string>
    <string name="label_tipo_ag">Tipo</string>
    <string name="label_turno">Turno</string>
    <string name="label_manha">Manhã</string>
    <string name="label_tarde">Tarde</string>
    <string name="label_noite">Noite</string>
    <string name="label_qtde_passageiros">Quantidade lugares</string>
    <string name="title_activity_chat_list_pessoas">chatListPessoas</string>
    <string name="title_activity_chat_search">Chat</string>
    <string name="title_activity_sala">SalaActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tab">TabActivity</string>

</resources>
