<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Home"
    android:name="menuHome">

    <item android:id="@+id/action_cadastro"
        android:title="@string/action_cadastro"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_agenda"
        android:title="@string/action_agenda"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_caronas"
        android:title="@string/action_caronas"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>
